--- a/backend/src/main/resources/config.yml
+++ b/backend/src/main/resources/config.yml
@@ -66,8 +66,8 @@ other-settings:
   display-system-actionbar: true      # Should the plugin display system actionbar and temporarily hide the custom actionbar?
   hide-team-names: true               # Hide the team name sent by other plugins or vanilla team system
   unsafe-chat-event: false            # Listen for canceled(unsafe) chat events from unknown plugins
-  default-condition-refresh-interval: 20  # Set default condition refresh interval
-  default-placeholder-refresh-interval: 1  # Set default placeholder refresh interval
+  default-condition-refresh-interval: 10  # Set default condition refresh interval in ticks
+  default-placeholder-refresh-interval: 1  # Set default placeholder refresh interval in ticks
   placeholder-refresh-interval:       # Custom placeholder refresh intervals for performance optimization
     "%player_name%": 100
     "%vault_prefix%": 20
