--- a/platforms/bukkit/src/main/resources/plugin.yml
+++ b/platforms/bukkit/src/main/resources/plugin.yml
@@ -15,6 +15,7 @@ softdepend:
   - AdvancedChat
   - VentureChat
   - EssentialsChat
+  - ChatControlRed
   - WorldGuard
 permissions:
   nameplates.command.equip:
