--- a/backend/src/main/resources/config.yml
+++ b/backend/src/main/resources/config.yml
@@ -23,8 +23,9 @@ modules:
 integrations:
   resource-pack:
     ItemsAdder: false         # Integration with ItemsAdder
-    ItemsAdder-old-method: false # Old method for ItemsAdder
+    ItemsAdder-old-method: false # Legacy integration with ItemsAdder
     Oraxen: false             # Integration with Oraxen
+    Nexo: false               # Integration with Nexo
     Creative-Central: false   # Integration with Creative-Central
   chat:
     TrChat: false             # Integration with TrChat
