--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Project settings
 # Rule: [major update].[feature update].[bug fix]
-project_version=3.0.15.1
+project_version=3.0.15.2
 config_version=34
 project_group=net.momirealms
 
@@ -18,8 +18,8 @@ asm_commons_version=9.7.1
 jar_relocator_version=1.7
 h2_driver_version=2.3.232
 sqlite_driver_version=3.47.0.0
-adventure_bundle_version=4.17.0
-adventure_platform_version=4.3.4
+adventure_bundle_version=4.18.0-SNAPSHOT
+adventure_platform_version=4.3.5-SNAPSHOT
 cloud_core_version=2.0.0
 cloud_services_version=2.0.0
 cloud_brigadier_version=2.0.0-beta.10
