--- a/backend/src/main/resources/config.yml
+++ b/backend/src/main/resources/config.yml
@@ -22,6 +22,7 @@ modules:
 # Plugin Integrations: Integrate resource packs and chat plugins with other plugins.
 integrations:
   resource-pack:
+    CraftEngine: false        # Integration with CraftEngine
     ItemsAdder: false         # Integration with ItemsAdder
     ItemsAdder-old-method: false # Legacy integration with ItemsAdder
     Oraxen: false             # Integration with Oraxen
