--- a/gradle.properties
+++ b/gradle.properties
@@ -47,9 +47,9 @@ lwjgl_version=3.3.4
 fastutil_version=8.5.15
 
 # Proxy settings
-systemProp.socks.proxyHost=127.0.0.1
-systemProp.socks.proxyPort=7890
-systemProp.http.proxyHost=127.0.0.1
-systemProp.http.proxyPort=7890
-systemProp.https.proxyHost=127.0.0.1
-systemProp.https.proxyPort=7890
+#systemProp.socks.proxyHost=127.0.0.1
+#systemProp.socks.proxyPort=7890
+#systemProp.http.proxyHost=127.0.0.1
+#systemProp.http.proxyPort=7890
+#systemProp.https.proxyHost=127.0.0.1
+#systemProp.https.proxyPort=7890
