--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Project settings
 # Rule: [major update].[feature update].[bug fix]
-project_version=3.0.26.1
+project_version=3.0.26.2
 config_version=37
 project_group=net.momirealms
 
@@ -47,9 +47,9 @@ lwjgl_version=3.3.4
 fastutil_version=8.5.15
 
 # Proxy settings
-#systemProp.socks.proxyHost=127.0.0.1
-#systemProp.socks.proxyPort=7890
-#systemProp.http.proxyHost=127.0.0.1
-#systemProp.http.proxyPort=7890
-#systemProp.https.proxyHost=127.0.0.1
-#systemProp.https.proxyPort=7890
+systemProp.socks.proxyHost=127.0.0.1
+systemProp.socks.proxyPort=7890
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=7890
+systemProp.https.proxyHost=127.0.0.1
+systemProp.https.proxyPort=7890
