Rename upload step and update JAR paths

--- a/.github/workflows/ten_plik.yml
+++ b/.github/workflows/ten_plik.yml
@@ -28,8 +28,10 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew clean build
 
-      - name: Upload Paper JAR
+      - name: Upload JAR
         uses: actions/upload-artifact@v4
         with:
-          name: CustomNameplates-Paper
-          path: platforms/paper/build/libs/*.jar
+          name: CustomNameplates-JAR
+          path: |
+            backend/build/libs/*.jar
+            build/libs/*.jar
