--- a/platforms/bukkit/src/main/resources/plugin.yml
+++ b/platforms/bukkit/src/main/resources/plugin.yml
@@ -20,6 +20,7 @@ softdepend:
   - ChatControlRed
   - WorldGuard
   - Typewriter
+  - HMCCosmetics
 permissions:
   nameplates.command.equip:
     default: true
